cli/tests/testdata/dynamic_import/permissions_blob_remote.ts.out
error: Uncaught (in promise) TypeError: Requires net access to "example.com", run again with the --allow-net flag
    at blob:null/[WILDCARD]:1:0
await import(URL.createObjectURL(blob));
^
    at async file:///[WILDCARD]/dynamic_import/permissions_blob_remote.ts:4:1
